--- a/app/temp_notebook.ipynb
+++ b/app/temp_notebook.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,14 +281,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tables: []\n"
+      "Tables: [('documents_values',)]\n"
      ]
     }
    ],
@@ -537,11 +537,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"What are the main ideas of the CS50 paper by Liu et al about the using of GenAI in education.\"\n",
+    "text = \"Give 5 points of embeddings and Audio from Mulan paper.\"\n",
     "query_vector = get_embedding(text)"
    ]
   },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,8 +564,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Only 3 Chunks so far"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,16 +581,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"'ID-rd278-1707749385.818722-0', 'ID-rd278-1707749385.818722-1', 'ID-rd278-1707749385.818722-8'\""
+       "\"'ID-rd278-1707933094.392059-0', 'ID-rd278-1707933091.252368-0', 'ID-rd278-1707933091.252368-4'\""
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,18 +655,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"\\n\\nThe main ideas of the CS50 paper by Liu et al about the use of Generative AI in education are:\\n\\n1. The apprehension towards AI in education: The paper acknowledges the concerns about AI disrupting education, particularly in terms of facilitating academic dishonesty. This leads to a common response of forbidding the use of AI altogether.\\n\\n2. Incorporating AI into CS50: The authors chose to directly incorporate Generative AI into CS50, Harvard University's introductory course in computer science. They implemented guardrails to uphold academic integrity and promote meaningful learning.\\n\\n3. The potential of AI in education: The paper discusses how AI can potentially improve the learning experience by providing continuous, customized support to students and allowing human educators to focus on more complex pedagogical issues.\\n\\n4. The development of CS50.ai: The authors developed a suite of AI tools, including a chatbot and a virtual rubber duck, to assist students in CS50. These tools were initially available to summer students, then to online students, and finally to on-campus students.\\n\\n5. The challenges and solutions of using AI: The paper discusses the challenges faced in integrating AI into education, such as the subjectivity of grading and the potential for academic dishonesty. The authors propose solutions, such as design50\""
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rafaeldavila/Documents/Duke/CREATE/LLM_test/data-optin-upload/venv/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The function `run` was deprecated in LangChain 0.1.0 and will be removed in 0.2.0. Use invoke instead.\n",
+      "  warn_deprecated(\n"
+     ]
     }
    ],
    "source": [
@@ -668,27 +673,33 @@
     "\n",
     "llm_gpt3_5_chain = LLMChain(prompt=prompt, llm=OpenAI())\n",
     "\n",
-    "llm_gpt3_5_chain.run(question=text, context=context, temperature=0)"
+    "response = llm_gpt3_5_chain.run(question=text, context=context, temperature=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'What are the main ideas of the CS50 paper by Liu et al about the using of GenAI in education.'"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1. MuLan is a two-tower, joint audio-text embedding model that is trained using 44 million music recordings (370K hours) and weakly-associated, free-form text annotations.\n",
+      "\n",
+      "2. The resulting audio-text representation subsumes existing ontologies while also being able to graduate to true zero-shot functionalities.\n",
+      "\n",
+      "3. The MuLan embeddings have been shown to be versatile, with a range of experiments demonstrating their capabilities in transfer learning, zero-shot music tagging, language understanding in the music domain, and cross-modal retrieval applications.\n",
+      "\n",
+      "4. MuLan uses a combination of language models and Transformer-based architectures, such as BERT and Audio Spectrogram Transformer, to embed both audio and text inputs into a shared space of dimensiond= 128.\n",
+      "\n",
+      "5. The training dataset for MuLan includes 44 million 30-second clips of music audio from internet music videos, with accompanying text data from video titles, descriptions, comments, and linked playlists.\n"
+     ]
     }
    ],
    "source": [
-    "text"
+    "print(response)"
    ]
   },
   {
